表现和行为规整
索引翻页的出现机制改进
html文件重命名

--- a/playslide.htm
+++ b/playslide.htm
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=devide-width,initial-scale=1">
-	<title></title>
+	<title>跑马灯效果--练习</title>
 	<link rel="stylesheet" href="css/imgSlide.css">
 </head>
 <body>
@@ -12,11 +12,6 @@
 			<li ><a href="#"><img src="image/dr01.jpg" alt=""></a></li>
 			<li><a href="#"><img src="image/dr02.jpg" alt=""></a></li>
 			<li><a href="#"><img src="image/dr03.jpg" alt=""></a></li>
-		</ul>
-		<ul class="move_nav slideNav">
-			<li ><a href="javascript:;"><span class="dot">1</span></a></li>
-			<li><a href="javascript:;"><span class="dot">2</span></a></li>
-			<li><a href="javascript:;"><span class="dot">3</span></a></li>
 		</ul>
 		<div class="updown">
 			<a href="javascript:;" id="next">下一页</a>
