添加上下滑动行为
视觉上图片可以一帧一帧的上翻或下翻

--- a/playslide.htm
+++ b/playslide.htm
@@ -26,7 +26,7 @@
 			var trySlide=Playslide(oPar,{
 				slideTime:3000,
 				curSlide:1,
-				slideType:"leftRight"
+				slideType:"topBottom"
 			});
 
 			document.getElementById('next').onclick=function(){
